--- a/index.html
+++ b/index.html
@@ -1,1 +1,153 @@
-"Hello there!" 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Sweet Spot | Inicio</title>
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="manifest" href="img/icons/site.webmanifest">
+
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/out-inicio.css">
+    
+</head>
+
+<body>
+    <!-- NavBar -->
+    <section>
+        <div id="navbar">
+            <span>
+                <a class="logo" href="inicio.html">
+                    <img src="img/inicio/nav-logo.png" alt="The sweet spot logo">
+                    <h1>The Sweet Spot</h1>
+                </a>
+            </span>
+            <a href="pasteleria.html">
+                <button class="admin">Administrador</button>
+            </a>
+        </div>
+    </section> <!-- NavBar -->
+
+    <!-- División -->
+    <section id="content">
+        <h2>Pedido</h2>
+
+        <!-- Menu -->
+        <div id="menu" class="content">
+            <h3>Menú</h3>
+            <br>
+            <p>Sabores de los pasteles:</p>
+            <!-- imgs sabores -->
+            <div id="sabores" class="wrap">
+                <img src="img/inicio/vanilla.png" alt="Imagen vainilla">
+                <img src="img/inicio/strawberry.png" alt="Imagen fresa">
+                <img src="img/inicio/chocolate.png" alt="Imagen chocolate">
+                <span>Vainilla</span>
+                <span>Fresa</span>
+                <span>Chocolate</span>
+            </div> <!-- imgs sabores -->
+            <hr>
+            <p>Precios:</p>
+            <ul>
+                <li>Pasteles de 1 sabor: $200.00</li>
+                <li>Pasteles de 2 sabores: $230.00</li>
+                <li>Pasteles de 3 sabores: $250.00</li>
+            </ul>
+            <p>Adornos:</p>
+            <!-- Adornos -->
+            <div id="adornos" class="wrap">
+                <img src="img/inicio/phrase.png" alt="Adorno de frase">
+                <img src="img/inicio/contorno.png" alt="Adorno de contorno">
+                <img src="img/inicio/frutas.png" alt="Adorno de frutas">
+                <img src="img/inicio/top-chocolates.png" alt="Adorno de chocolates">
+                <span>Frase</span>
+                <span>Contorno de</span>
+                <span>Topping de</span>
+                <span>Topping de</span>
+                <span>de Chantilli</span>
+                <span>Chantilli</span>
+                <span>Frutas</span>
+                <span>Chocolates</span>
+                <span>$7.00</span>
+                <span>$7.00</span>
+                <span>$15.00</span>
+                <span>$10.00</span>
+            </div> <!-- Adornos -->
+        </div> <!-- Menu -->
+
+        <div id="formulario" class="content">
+            <h3>Formulario de pedido</h3>
+            <br>
+            <form action="submit">
+                <!-- Datos del usuario -->
+                <label for="nombre">Nombre:</label><br>
+                <input class="text input" type="text" name="nombre" id="nombre" placeholder="Juan Pérez"><br>
+                <label for="telefono">Teléfono: </label><br>
+                <input class="text input" type="tel" name="telefono" id="telefono" placeholder="5512345678"
+                    maxlength="10"><br>
+                <label for="email">Correo electrónico:</label><br>
+                <input class="text input" type="email" name="email" id="email" placeholder="correo@mail.com">
+                <hr>
+
+                <!-- Sabores -->
+                <p>Selección de sabores:</p>
+                <input type="checkbox" name="vainilla" id="vainilla" value="vainilla">
+                <label for="vainilla">Vainilla</label><br>
+                <input type="checkbox" name="fresa" id="fresa" value="fresa">
+                <label for="fresa">Fresa</label><br>
+                <input type="checkbox" name="chocolate" id="chocolate" value="chocolate">
+                <label for="chocolate">Chocolate</label><br><br>
+
+                <!-- Adornos -->
+                <p>Selección de adornos:</p>
+                <input type="checkbox" name="frase" id="frase" value="frase">
+                <label for="frase">Escritura de frase con chantilli</label><br>
+                <input type="checkbox" name="contorno" id="contorno" value="contorno">
+                <label for="contorno">Contorno de chantilli</label><br>
+                <input type="checkbox" name="frutas" id="frutas" value="frutas">
+                <label for="frutas">Topping de frutas</label><br>
+                <input type="checkbox" name="t-chocolates" id="t-chocolates" value="t-chocolates">
+                <label for="t-chocolates">Topping de chocolates</label><br><br>
+
+                <!-- Observaciones -->
+                <p>Obersvaciones adicionales: </p>
+                <textarea class="input" name="observaciones" id="observaciones" cols="30" rows="10"
+                    placeholder="Detalles del pedido..."></textarea><br><br>
+
+                <!-- Botones -->
+                <input class="btn reset" type="reset" value="Limpiar pedido">
+                <input class="btn submit" type="submit" value="Enviar pedido">
+
+            </form> <!-- Formulario de pedido -->
+        </div> <!-- Formulario de pedido -->
+    </section> <!-- División de contenido -->
+    <br>
+
+    <footer>
+        <div id="contacto">
+            <h3>Contacto</h3>
+            <h3 class="brand">The Sweet Spot</h3>
+            <p>
+                Dirección: República pastelera N. 23, Del. Cuauhtemoc, CDMX. <br>
+                Teléfono: 55 9876 2367 <br>
+                Horario de atención: 10:00 - 20:00 HRS.
+            </p>
+        </div> <!-- Contacto -->
+    </footer>
+
+    <!-- JS dependancies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+</body>
+
+</html>
