--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section>
         <div id="navbar">
             <span>
-                <a class="logo" href="inicio.html">
+                <a class="logo" href="index.html">
                     <img src="img/inicio/nav-logo.png" alt="The sweet spot logo">
                     <h1>The Sweet Spot</h1>
                 </a>
